# FFAB

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-ffab-linux.yml
images/: AppIcon.icns
licenses/: FFAB-license.txt
linux/: ffab.desktop
readme/: README.md
scripts/: checkdls.sh  dummyAGL.sh  ninja-release.sh  ninja.sh
scripts/archive/: analysis-output.md  build-mac-all.sh  build-mac-arm-debug.sh  build-mac-arm-release.sh  build-mac-universal-debug.sh  build-mac-universal-release.sh  ffmpeg-audio-filters.json  ffmpeg-audio-filters.md  ffmpeg-filter-scraper.py  ffmpeg-filters-to-markdown.py  ffmpeg-unit-analyzer.py  github-workflow-linux-build.yml
src/: main.cpp
src/Core/: AppConfig.h  AudioFileScanner.cpp  AudioFileScanner.h  BatchProcessor.cpp  BatchProcessor.h  CompandBandData.h  Connection.h  DAGCommandBuilder.cpp  DAGCommandBuilder.h  FFmpegDetector.cpp  FFmpegDetector.h  FFmpegRunner.cpp  FFmpegRunner.h  FFmpegSyntax.cpp  FFmpegSyntax.h  FilterChain.cpp  FilterChain.h  FilterGraph.cpp  FilterGraph.h  FilterNode.h  JobListBuilder.cpp  JobListBuilder.h  LogFileWriter.cpp  LogFileWriter.h  OperationPreview.cpp  OperationPreview.h  Port.h  Preferences.cpp  Preferences.h  PreviewGenerator.cpp  PreviewGenerator.h  UpdateChecker.cpp  UpdateChecker.h
src/FFmpeg/: FFmpegCommandBuilder.cpp  FFmpegCommandBuilder.h  FFmpegPresets.cpp  FFmpegPresets.h
src/Filters/: AudioInputFilter.cpp  AudioInputFilter.h  AuxOutputFilter.cpp  AuxOutputFilter.h  BaseFilter.cpp  BaseFilter.h  ChannelEqFilter.cpp  ChannelEqFilter.h  CustomFFmpegFilter.cpp  CustomFFmpegFilter.h  InputFilter.cpp  InputFilter.h  MultiOutputFilter.cpp  MultiOutputFilter.h  OutputFilter.cpp  OutputFilter.h  SmartAuxReturn.cpp  SmartAuxReturn.h  ff-acompressor.cpp  ff-acompressor.h  ff-acontrast.cpp  ff-acontrast.h  ff-acopy.cpp  ff-acopy.h  ff-acrossfade.cpp  ff-acrossfade.h  ff-acrossover.cpp  ff-acrossover.h  ff-acrusher.cpp  ff-acrusher.h  ff-acue.cpp  ff-acue.h  ff-adeclick.cpp  ff-adeclick.h  ff-adeclip.cpp  ff-adeclip.h  ff-adecorrelate.cpp  ff-adecorrelate.h  ff-adelay.cpp  ff-adelay.h  (+202 more)
src/UI/: AsplitRowWidget.cpp  AsplitRowWidget.h  BatchAdminPanel.cpp  BatchAdminPanel.h  BatchConfirmDialog.cpp  BatchConfirmDialog.h  BatchSettingsWindow.cpp  BatchSettingsWindow.h  ChannelEqWidget.cpp  ChannelEqWidget.h  CollapsibleHelpSection.cpp  CollapsibleHelpSection.h  CommandViewWindow.cpp  CommandViewWindow.h  CompandCurveWidget.cpp  CompandCurveWidget.h  FFmpegSetupDialog.cpp  FFmpegSetupDialog.h  FileListWidget.cpp  FileListWidget.h  FilterChainWidget.cpp  FilterChainWidget.h  FilterMenuBuilder.cpp  FilterMenuBuilder.h  FilterParamsPanel.cpp  FilterParamsPanel.h  FilterPresetBar.cpp  FilterPresetBar.h  FilterPresetManager.cpp  FilterPresetManager.h  InputBatchPanel.cpp  InputBatchPanel.h  InputPanel.cpp  InputPanel.h  LogViewWindow.cpp  LogViewWindow.h  LogWidget.cpp  LogWidget.h  MainWindow.cpp  MainWindow.h  (+13 more)
src/Utils/: FrequencySliderHelpers.h  KeyCommands.h  Logger.cpp  Logger.h  Metadata.cpp  Metadata.h  PresetStorage.cpp  PresetStorage.h  SnapSlider.h  UnicodeSymbols.h
